--- a/Nitzsche/src/App.css
+++ b/Nitzsche/src/App.css
@@ -9,8 +9,9 @@
   background: var(--base-white, #FFF);
   border: 1px solid blue;
   margin: 0 auto;
+  font-family: Inter;
 }
-
+/*header part*/
 header{
   display: flex;
   height: 80px; 
@@ -51,4 +52,69 @@ header{
     width: 2rem;
   }
 
+  /*hero part*/
+  .hero-section{
+    margin-top: 48px;
+    width: 1000px;
+    height: fit;
+    border: 1px solid green;
+    display: flex;
+    justify-content: space-between;
+    
+    
+  }
 
+  /*product name category*/
+  .product-name-price{
+    border: 1px solid brown;
+  }
+  .product-details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 120px;
+    padding-right: 30px;
+    width: auto;
+    padding-top: 96px;
+  }
+  .tag-name{
+    margin-left: -90px;
+    border-radius: 6px;
+    background: var(--base-white, #FFF); 
+    gap: 3px; 
+    padding: 4px 10px; 
+  }
+  .product-name{
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 38px; /* 126.667% */ 
+    color: var(--primary-500, #870064); 
+  }
+  .product-description{
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; 
+    color: var(--gray-600, #475467); 
+  }
+  .btn-shop{
+    margin-top: 48px;
+    border-radius: 8px;
+    border: 1px solid var(--primary-600, #66004B);
+    background: var(--primary-600, #66004B);
+    padding: 12px 20px; 
+    width: 100%;
+    color: #FFF;
+   /* Shadow/xs */
+    box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  }
+
+  .pro-image{
+    height: 100%;
+    width: 552px;
+    border-radius: var(--spacing-system-guides-corner-radius-3, 12px);
+    border: 1px solid var(--gray-200, #EAECF0);
+     background: var(--gradient-linear-color-20, linear-gradient(45deg, #E9DEFA 0%, #FFF6EB 100%)); 
+  }
